# feature_engineering_example

./: README.md  docker-compose.yml  dockerfile  pyproject.toml
feature_engineering_example/: feature_engineering.py  main.py  table_generation.py  utils.py
tests/: test_feature_engineering.py  test_table_generation.py
