[tool.poetry]
name = "feature_engineering_example"
version = "0.1.0"
description = ""
authors = ["Carl Rynegardh, elt12cry@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
typer = "^0.3.2"
pandas = "^1.3.1"
pandera = "^0.10.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
flake8 = "^3.9.2"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.3"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

